# Practice

./: LICENSE  README.md
CMakeDemo/: README.md
CMakeDemo/Demo/: CMakeLists.txt  main.cpp
CMakeDemo/GRPC/: CMakeLists.txt  greeter_async_client.cc  greeter_async_client2.cc  greeter_async_server.cc  greeter_client.cc  greeter_server.cc
CMakeDemo/GRPC/proto/: helloworld.proto
CMakeDemo/Protobuf/: CMakeLists.txt  main.cpp
CMakeDemo/Protobuf/proto/: family.proto
CPP/: CMakeLists.txt
CPP/src/: any_type.h  blocking_queue.h  complex_queue.h  function_wrapper.h  ioc_container.h  join_threads.h  leaky_bucket.h  lock_free_stack.h  parallel_accumulate.h  parallel_quick_sort.h  spinlock_mutex.h  thread_group.h  thread_pool.h  thread_pool_with_local_queue.h  thread_pool_with_stealing_queue.cpp  thread_pool_with_stealing_queue.h  thread_safe_list.h  thread_safe_map.h  thread_safe_queue.h  thread_safe_stack.h  token_bucket.h
CPP/test/: sorter.cpp  spider.cpp  tester.cpp
CloudNative/Helm/: rancher-2.5.5.tgz
CloudNative/Helm/wordpress/: Chart.yaml  requirements.yaml  values.yaml
CloudNative/Kubernetes/CRD/: website-controller.yaml
CloudNative/Kubernetes/config/: configmap.yaml
CloudNative/Kubernetes/deployment/: kubia-deployment.yaml
CloudNative/Kubernetes/job/: kubia-cronjob.yaml  kubia-job.yaml
CloudNative/Kubernetes/namespace/: scorpion-ns.yaml
CloudNative/Kubernetes/pod/: downward-api-env.yaml  downward-api-vol.yaml
CloudNative/Kubernetes/security/: cluster-role-binding.yaml  limitrange.yaml
CloudNative/Kubernetes/service/: external-svc-endpoint.yaml  external-svc-name.yaml  kubia-ingress-tls.yaml  kubia-svc-clusterip.yaml
CloudNative/Kubernetes/statefulset/: kubia-headless.yaml  kubia-statefulset.yaml
CloudNative/Kubernetes/volumes/: hostpath-pod-pvc.yaml  hostpath-pv-mysql.yaml
Docker/kubia/: app.js
Docker/yaml/: gitrepo-vol-pod.yaml  hostpath-pod.yaml  hostpath-pv.yaml  hostpath-pvc-sc.yaml  kubia-ds.yaml  kubia-ingress.yaml  kubia-pod.yaml  kubia-probe-live.yaml  kubia-probe-ready.yaml  kubia-rc.yaml  kubia-rs-namedport.yaml  kubia-rs.yaml  kubia-svc-loadbalancer.yaml  kubia-svc-nodeport.yaml  kubia-svc.yaml
Golang/: .gitignore  README.md  go.mod  go.sum
Golang/cggame/: generate.sh
Golang/cggame/cg/: center.go  centerclient.go  centerserver.go  player.go  player_test.go  room.go
Golang/cggame/cgss/: cgss.go
Golang/cggame/ipc/: client.go  ipc_test.go  server.go
Golang/helloworld/: generate.sh  main.go
Golang/helloworld/awesome/: README.md  awesome.go  awesome_test.go
Golang/migration/: generate.sh  main.go
Golang/migration/helper/: common_define.go  cpp_db_graph.go  cpp_db_graph_test.go  cpp_graph.go  cpp_graph_test.go  db_usage.go  db_usage_test.go  svr_relation.go  svr_relation_test.go
Golang/musicplayer/: main.go
Golang/musicplayer/music/: library.go  music.go  player.go
Golang/xlsx2graphviz/: generate.sh  main.go
Golang/xlsx2graphviz/generate/: generate.sh
GrpcDemo/: .gitignore  README.md
GrpcDemo/cpp/: CMakeLists.txt  example_async_client.cpp  example_async_server.cpp  example_async_thread_client.cpp  example_client.cpp  example_server.cpp  genrate.sh
GrpcDemo/cpp/echo/: CMakeLists.txt
GrpcDemo/cpp/echo/grpc/: create_channel.cpp  echo_grpc_client.cpp  echo_grpc_client.h  grpc_ext_client.cpp  grpc_ext_client.h  grpc_ext_common.h  unary_interceptor.cpp
GrpcDemo/cpp/echo/src/: echo_async_client.cpp  echo_async_thread_client.cpp
GrpcDemo/cpp/echo/test/: echo_async_server.cpp  echo_client.cpp  echo_server.cpp  echo_template_client_v1.cpp  echo_template_client_v2.cpp
GrpcDemo/cpp/example/: CMakeLists.txt  example_client.cpp
GrpcDemo/cpp/example/executable/: example_async_client.cpp  example_async_server.cpp  example_async_thread_client.cpp  example_client.cpp  example_server.cpp  example_template_client.cpp  example_template_client_v1.cpp  example_template_client_v2.cpp
GrpcDemo/cpp/example/experiment/: create_channel.cpp  create_channel.h  eg_client.cpp  eg_client.h  example_client.cpp  example_client.h  grpc_ext_client.cpp  unary_interceptor.cpp  unary_interceptor.h
GrpcDemo/cpp/nested/: CMakeLists.txt
GrpcDemo/cpp/nested/client/: echo_client.cpp  echo_client.h
GrpcDemo/cpp/nested/grpc/: grpc_ext_base.cpp  grpc_ext_base.h  grpc_ext_client.cpp  grpc_ext_client.h
GrpcDemo/cpp/nested/test/: echo_client_v1.cpp  echo_client_v2.cpp
GrpcDemo/go/: build.sh  example_server.go  go.mod
GrpcDemo/go/client/: main.go
GrpcDemo/go/echo/: build.sh  go.mod  go.sum
GrpcDemo/go/example/: build.sh
GrpcDemo/go/server/: main.go
GrpcDemo/proto/: echo.proto  example.proto  nested_echo.proto
Kubernetes/Kubia/: kubia-probe-ready.yaml  kubia-svc-namedport.yaml  scorpion-ns.yaml
Kubernetes/YAML/CRD/: website-crd.yaml  website-role.yaml
Kubernetes/YAML/deployment/: production-deployment.yaml
Kubernetes/YAML/pod/: fortune-pod.yaml  kubia-pod.yaml
Kubernetes/YAML/replica/: kubia-rc.yaml
Kubernetes/YAML/security/: resourcequota.yaml  role-rolebinding.yaml  service-account.yaml
Kubernetes/YAML/service/: kubia-svc-loadbalancer.yaml  kubia-svc-nodeport.yaml
Kubernetes/YAML/volumes/: hostpath-pvc.yaml
Python/: .gitignore  Draw.py  README.md
(+3 files in other folders)
